# CMakeSeries

./: README.md
02/source/: CMakeLists.txt  main.cpp
03/source/: CMakeLists.txt  main.cpp
03/source/include/: cube.h  pyramid.h  solid.h
03/source/src/: cube.cpp  pyramid.cpp
